# BirthDayApp

./: CMakeLists.txt  README.md  day.h  heap.c  heap.h  install.sh  main.c  person.h  storage.c  storage.h  utils.c  utils.h
